# FullStack-GenAI

./: .gitignore  main.py  pyproject.toml  requirement.txt  requirements.txt
Class-03/: encoding-embedding.ipynb
Class-04/: encoding.ipynb
Class-06/: classical_word_embedding.ipynb
Class-16-17-16&17-May-2026-LLM-Acess-Via-APIs/: access-diff-llm-mmllm.ipynb
Class-19-24-May-2026-Huggingface-and-Unsloth/: huggingface_explore_live_class.ipynb
Class-20-30-May-2026-hf-deep-dive/: Huggingface_Live_Class_updated.ipynb
Day - 17 LLMS ,SLM, Multimodal LLM Via Different Apis/: access-diff-llm-mmllm.ipynb  access-different-llm-mmllm.ipynb
