[project]
name = "fullstack-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.3.0",
    "langchain-anthropic>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.4",
    "python-dotenv>=1.2.2",
]
